# image-uploader-rust-lambda

./: Cargo.toml  README.md  resource.md
src/: lib.rs  main.rs  s3.rs
