[package]
name = "rust-lambda-image-uploader"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]

lambda_runtime = "0.10.0"
serde = "1"
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.20.0", features = ["behavior-version-latest"] }
image = "0.25.0"
